--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,9 @@ dev = [
     "rich>=13.9.4",
     "ruff>=0.8.4",
 ]
+kaggle = [
+    "grpcio>=1.74.0",
+]
 temp = [
     "pandas-datareader>=0.10.0",
     "scikit-network>=0.33.3",
